<?xml version="1.0"?>
<package>
  <name>mas_srvs</name>
  <version>1.4.0</version>
  <description>The Multi-Agent System services definition package</description>
  <author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>
  <maintainer email="expertinos.unifei@gmail.com">Expertinos Autonomous Robotics Team</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mas_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>mas_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
