<?xml version="1.0"?>
<package>
	<name>mrta_vc</name>
	<version>1.1.0</version>
	<description>The mrta_vc message definition package</description>
	<author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>
	<maintainer email="expertinos.unifei@gmail.com">Expertinos UNIFEI</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>actionlib_msgs</build_depend>
	<build_depend>genmsg</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>
  	<build_depend>nav_msgs</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>actionlib_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
  	<run_depend>nav_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	
</package>
