<?xml version="1.0"?>
<package>
	<name>mrta_vc_stack</name>
	<version>1.1.0</version>
	<description>The mrta_vc metapackage</description>
	<author email="adrianohrl@gmail.com">Adriano Henrique Rossette Leite</author>
	<maintainer email="expertinos.unifei@gmail.com">Expertinos UNIFEI</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>mrta</run_depend>
	<run_depend>mrta_vc</run_depend>
	<run_depend>mrta_vc_lib</run_depend>

	<export>
		<metapackage/>
	</export>
</package>
