<?xml version="1.0"?>
<package>
	<name>mrs</name>
        <version>1.2.3</version>
	<description>The Multi-Robot System metapackage</description>
	<author email="adrianohrl@gmail.com">Adriano Henrique Rossette Leite</author>
	<maintainer email="expertinos.unifei@gmail.com">Expertinos UNIFEI</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>mrs_actions</run_depend>
	<run_depend>mrs_agents</run_depend>
        <run_depend>mrs_launches</run_depend>
	<run_depend>mrs_msgs</run_depend>
	<run_depend>mrs_srvs</run_depend>
	<run_depend>mrta</run_depend>

	<export>
		<metapackage/>
	</export>
</package>
